--- a/_sources/d_geosciences/Fluid_Dynamics/Lecture8_2D_Energy_Equation.ipynb
+++ b/_sources/d_geosciences/Fluid_Dynamics/Lecture8_2D_Energy_Equation.ipynb
@@ -255,7 +255,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "So the total rate of change of angle ($\\alpha+\\beta$) is "
+    "So the total rate of change of angle ($\\alpha+\\beta$) or the total strain rate due to shear stress is "
    ]
   },
   {
@@ -266,11 +266,104 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Since we know that shear stress $\\tau$ equals viscosity $\\mu$ multiplies strain rate, we can have the following expression"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$\\tau_{xy} + \\tau_{yx} = \\mu(\\frac{du}{dy}+\\frac{dv}{dx})$$ (equation14) where the strain rate is contributed by both vertical ($\\tau_{xy}$) and horizontal ($\\tau_{yx}$) shear stresses."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Here, we assume the fluid block is not rotating, so that the net torque equals zero. In another word, $\\tau_{xy}=\\tau_{yx}$. Hence,"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$2\\tau_{xy}=\\mu(\\frac{du}{dy}+\\frac{dv}{dx})$$ (equation15)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "However, we have not considered the strain contributed by the change of angles from the other side. They contribute the same amount due to symmetry as shown below."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<img src='img/shear_stress1.PNG' width=400>\n",
+    "Figure 4"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "So equation {eq}`equation15` should actually be written as"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$2\\tau_{xy} = 2\\mu(\\frac{du}{dy}+\\frac{dv}{dx})$$ (equation16)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "So finally, the shear stress can be expressed as"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$\\tau_{xy}=\\tau_{yx}=\\mu(\\frac{du}{dy}+\\frac{dv}{dx})$$ (equation17)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "As for normal stress $\\sigma_{xx}$ or $\\sigma_{yy}$, we have the strain from both sides, so we have doubled the strain rate from a single side."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<img src='img/normal_stress.PNG' width=400>\n",
+    "Figure 5"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$\\sigma_{xx}=2\\dot{e}=2\\frac{\\delta x}{dx}\\div t = 2\\frac{(u_0 + \\delta u - u_0)dt}{dx}\\div dt=2\\frac{du}{dx}$$(equation18)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$\\sigma_{yy}=2\\frac{dv}{dy}$$(equation19)"
+   ]
   },
   {
    "cell_type": "markdown",
