--- a/notebooks/d_geosciences/Fluid_Dynamics/Lecture8_2D_Energy_Equation.ipynb
+++ b/notebooks/d_geosciences/Fluid_Dynamics/Lecture8_2D_Energy_Equation.ipynb
@@ -206,7 +206,7 @@
    "metadata": {},
    "source": [
     "<img src='img/shear_stress.PNG' width=700>\n",
-    "Figure 3"
+    "Figure 3: If rotational equilibrium, then net torque equals zero. In another word, $\\tau_{xy}$ is a reaction stress of $\\tau_{yx}$, and they are the same. "
    ]
   },
   {
@@ -276,64 +276,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "$$\\tau_{xy} + \\tau_{yx} = \\mu(\\frac{du}{dy}+\\frac{dv}{dx})$$ (equation14) where the strain rate is contributed by both vertical ($\\tau_{xy}$) and horizontal ($\\tau_{yx}$) shear stresses."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Here, we assume the fluid block is not rotating, so that the net torque equals zero. In another word, $\\tau_{xy}=\\tau_{yx}$. Hence,"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "$$2\\tau_{xy}=\\mu(\\frac{du}{dy}+\\frac{dv}{dx})$$ (equation15)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "However, we have not considered the strain contributed by the change of angles from the other side. They contribute the same amount due to symmetry as shown below."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<img src='img/shear_stress1.PNG' width=400>\n",
-    "Figure 4"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "So equation {eq}`equation15` should actually be written as"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "$$2\\tau_{xy} = 2\\mu(\\frac{du}{dy}+\\frac{dv}{dx})$$ (equation16)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "So finally, the shear stress can be expressed as"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "$$\\tau_{xy}=\\tau_{yx}=\\mu(\\frac{du}{dy}+\\frac{dv}{dx})$$ (equation17)"
+    "$$\\tau_{xy} = \\tau_{yx} = \\mu(\\frac{du}{dy}+\\frac{dv}{dx})$$ (equation14) since we know that $\\tau_{xy}$ and $\\tau_{yx}$ is one thing, they are the reactional existence of one another."
    ]
   },
   {
@@ -355,15 +298,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "$$\\sigma_{xx}=2\\dot{e}=2\\frac{\\delta x}{dx}\\div t = 2\\frac{(u_0 + \\delta u - u_0)dt}{dx}\\div dt=2\\frac{du}{dx}$$(equation18)"
+    "$$\\sigma_{xx}=2\\mu\\dot{e}=2\\mu\\frac{\\delta x}{dx}\\div t = 2\\mu\\frac{(u_0 + \\delta u - u_0)dt}{dx}\\div dt=2\\mu\\frac{du}{dx}$$(equation15)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "$$\\sigma_{yy}=2\\frac{dv}{dy}$$(equation19)"
+    "$$\\sigma_{yy}=2\\mu\\frac{dv}{dy}$$(equation16)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
