--- a/notebooks/d_geosciences/Fluid_Dynamics/Lecture8_Part1_Navier_Stoke_Equation.ipynb
+++ b/notebooks/d_geosciences/Fluid_Dynamics/Lecture8_Part1_Navier_Stoke_Equation.ipynb
@@ -4,8 +4,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "(Lecture8_2D_Energy_Equation) =\n",
-    "## Lecture8_2D_Energy_Equation"
+    "(Lecture8_Part1_Navier_Stoke_Equation) =\n",
+    "## Lecture8_Part1_Navier_Stoke_Equation"
    ]
   },
   {
@@ -89,7 +89,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The equation is developed by summing up the forces of an infinitesimal control volume V ($V=d_{x}d_{y}d_{z}$) in Cartesian coordinate system, and setting the result equal to $m\\vec{a}$. This is demonstrated in the figure below."
+    "The equation is developed by summing up the forces of an infinitesimal control volume V ($V=d_{x}d_{y}d_{z}$) in Cartesian coordinate system, and setting the result equal to $m\\vec{a}$. This is demonstrated in the figure below for viscosity forces."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Viscosity Forces"
    ]
   },
   {
@@ -170,7 +177,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Dividing $V$ at the both sides, we have"
+    "Dividing $V$ at the both sides, we have the viscosity forces per unit volume in the x-direction as follow"
    ]
   },
   {
@@ -191,7 +198,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Stress Tensor"
+    "## 2D Stress"
    ]
   },
   {
@@ -309,11 +316,235 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## 3D Stress"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "If we apply the same logic, we can have the normal and shear stresses in 3d problem due to viscosity alone"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$\\sigma_{xx}=2\\mu\\frac{du}{dx}$$(equation17)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$\\sigma_{yy}=2\\mu\\frac{dv}{dy}$$(equation18)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$\\sigma_{zz}=2\\mu\\frac{dw}{dz}$$(equation19)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$\\tau_{xy}=\\tau_{yx}=\\mu(\\frac{du}{dy}+\\frac{dv}{dx})$$(equation20)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$\\tau_{yz}=\\tau_{zy}=\\mu(\\frac{dw}{dy}+\\frac{dv}{dz})$$(equation21)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$\\tau_{xz}=\\tau_{zx}=\\mu(\\frac{dw}{dx}+\\frac{du}{dz})$$(equation22) where $w$ is the z-direction velocity."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Finally, if we plug in equations {eq}`equation17`, {eq}`equation20` and {eq}`equation22` into the equation {eq}`equation9`, we find that the viscous forces in the x-directions per unit volume of the element is, for constant viscosity,"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$2\\mu\\frac{\\delta^2u}{\\delta x^2}+\\mu(\\frac{\\delta^2 u}{\\delta y^2}+\\frac{\\delta^2v}{\\delta x \\delta y}+\\frac{\\delta^2 w}{\\delta x \\delta z}+\\frac{\\delta^2 u}{\\delta z^2})$$ (equation23)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "All of these expressions can be further simplified by substituting the continuity equation {eq}`equation20` differentiated wrt. $x$."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$\\frac{du}{dx}+\\frac{dv}{dy}+\\frac{dw}{dz}=0$$ (equation24)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$\\frac{d^2u}{dx^2}=-\\frac{d^2v}{dydx}-\\frac{d^2 w}{dz dx}$$ (equation25)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Plugging in equation {eq}`equation25` into {eq}`equation23`, we arrive at"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$\\mu(\\frac{\\delta^2u}{\\delta x^2}+\\frac{\\delta^2u}{\\delta y^2}+\\frac{\\delta^2u}{\\delta z^2})$$ (equation26)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "and same logic applies to the y and z direction"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$\\mu(\\frac{\\delta^2v}{\\delta x^2}+\\frac{\\delta^2v}{\\delta y^2}+\\frac{\\delta^2v}{\\delta z^2})$$ (equation27)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "and"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$\\mu(\\frac{\\delta^2w}{\\delta x^2}+\\frac{\\delta^2w}{\\delta y^2}+\\frac{\\delta^2w}{\\delta z^2})$$ (equation28)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "as the expressions for the net viscous forces per unit volume in the y and z directions, respectively."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Pressure Forces"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "It is not hard to find that the net pressure force on the element in the x-direction per unit area/volume of the fluid element is"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$\\frac{p(x)\\delta y - p(x+\\delta x)\\delta y}{\\delta x \\delta y}=-\\frac{[p(x+\\delta x)-p(x)]}{\\delta x}$$ (equation29)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "which by virtue of a simple Taylor series expansion is"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$-\\frac{\\delta p}{\\delta x}$$ (equation30)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Same logic applies to the y and z-directions"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$-\\frac{\\delta p}{\\delta y}$$ (equation31)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$-\\frac{\\delta p}{\\delta z}$$ (equation32)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Navier-Stoke Equation Final Form"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "With the easy-to-proof gravity force, we can put the three forces together to obtain the final Navier-Stoke equation we stated in the equation {eq}`equation1`. However, let me further explain the acceleration $a$ term on the left-hand-side of the equation. The acceleration measures the change of velocity. In a vector field for velocity, even if a particle stays at the same position, the velocity may change from time to time. For example, you can feel the water velocity changes through time when you stay in the same spot of a river. On the other hand, the velocity may also change from place to place. For example, you might find that the velocity of the water is faster at the entrence of a river than, say, at the centre of the river."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Applying the chain rule we can derive the temporal and convective acceleration in x-direction"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$a_x =\\frac{\\text{d}u}{\\text{d}t}=\\frac{\\partial u}{\\partial t}+\\frac{\\partial u}{\\partial x}\\frac{\\partial x}{\\partial t}+\\frac{\\partial u}{\\partial y}\\frac{\\partial y}{\\partial t}+\\frac{\\partial u}{\\partial z}\\frac{\\partial z}{\\partial t}$$(equation33)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "So put all together, we should have understood the Navier-Stoke equation in 3D vector form."
+   ]
   },
   {
    "cell_type": "markdown",
