--- a/_sources/d_geosciences/Fluid_Dynamics/Lecture8_Part1_Navier_Stoke_Equation.ipynb
+++ b/_sources/d_geosciences/Fluid_Dynamics/Lecture8_Part1_Navier_Stoke_Equation.ipynb
@@ -543,7 +543,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "So put all together, we should have understood the Navier-Stoke equation in 3D vector form."
+    "So put all together, we should have understood the Navier-Stoke equation in 3D vector form in {eq}`equation1`."
    ]
   }
  ],
